--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "angular": "^1.5.8",
+    "angular-local-storage": "^0.5.0",
     "angular-mocks": "^1.5.8",
     "angular-route": "^1.5.8",
     "body-parser": "^1.15.2",
